Bug 1170884 - Replace "new Integer" with "Integer.valueOf". r=nalexander
--HG--
extra : commitid : Bu9mVzpdxbK
extra : rebase_source : e7ba0854b759dc4f9be0028603ae67ad107d760d
extra : histedit_source : b317bfcb27452a24aabe674b680651c8017a4152